--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.3"
   }
 }
